implementation of week 3

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ fastlane/test_output
 iOSInjectionProject/
 
 # End of https://www.toptal.com/developers/gitignore/api/swift
+MemoryGame/MemoryGame.xcodeproj/xcuserdata
+MemoryGame/MemoryGame.xcodeproj/project.xcworkspace/xcuserdata
